--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+body{
+    font-family: Satoshi Variable, ui-sans-serif, system-ui, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+    color: rgb(91 89 86 / 1);
+}
 a:after {
     border: 0 solid #e5e7eb;
     box-sizing: border-box;
@@ -39,4 +43,11 @@ div.input:has(>input:not([type=checkbox]),>select), input:not(div>input:not([typ
 
 input:focus {
   outline: none;
+}
+
+.container{
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 16px;
 }
