--- a/src/App.css
+++ b/src/App.css
@@ -31,13 +31,16 @@ a {
   text-decoration: none;
 }
 
+li{
+  border-bottom-color: rgb(203 201 199 / var(--tw-border-opacity, 1));
+  border-top-color: rgb(203 201 199 / var(--tw-border-opacity, 1));
+}
+
 div.input:has(>input:not([type=checkbox]),>select), input:not(div>input:not([type=checkbox])), select:not(div>select) {
     border-radius: .25rem;
     border-width: 1px;
-    --tw-border-opacity: 1;
-    border-color: rgb(156 163 175 / var(--tw-border-opacity, 1));
-    --tw-bg-opacity: 1;
-    background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+    border-color: rgb(156 163 175 / 1);
+    background-color: rgb(255 255 255 / 1);
     padding: .75rem 1rem;
 }
 
